<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <EditTextPreference
        android:id="@+id/preferences_age"
        android:dialogTitle="@string/helloactivity_age"
        android:inputType="number"
        android:key="pref_age"
        android:title="@string/helloactivity_age" />
    <ListPreference android:key="pref_gender"
        android:id="@+id/preferences_gender"
        android:title="@string/helloactivity_gender"
        android:entries="@array/helloactivity_gender_list"
        android:entryValues="@array/helloactivity_gender_list" />
    <ListPreference android:key="pref_diabetes_type"
        android:id="@+id/preferences_diabetes_type"
        android:title="@string/helloactivity_spinner_diabetes_type"
        android:entries="@array/helloactivity_diabetes_type"
        android:entryValues="@array/helloactivity_diabetes_type" />
    <ListPreference android:key="pref_unit"
        android:id="@+id/preferences_unit"
        android:title="@string/helloactivity_spinner_preferred_unit"
        android:entries="@array/helloactivity_preferred_unit"
        android:entryValues="@array/helloactivity_preferred_unit" />

    <PreferenceCategory android:title="@string/preferences_about">
        <Preference
            android:summary="@string/version"
            android:title="@string/preferences_version"/>
        <Preference
            android:key="preferences_terms"
            android:title="@string/preferences_terms"/>
    </PreferenceCategory>
</PreferenceScreen>