<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
    <shortcut
        android:enabled="true"
        android:icon="@drawable/add_circle_glucose"
        android:shortcutDisabledMessage="@string/title_activity_add_glucose"
        android:shortcutId="glucose"
        android:shortcutLongLabel="@string/title_activity_add_glucose"
        android:shortcutShortLabel="@string/title_activity_add_glucose">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetClass="org.glucosio.android.activity.AddGlucoseActivity"
            android:targetPackage="org.glucosio.android" />
    </shortcut>
    <shortcut
        android:enabled="true"
        android:icon="@drawable/add_circle_weight"
        android:shortcutDisabledMessage="@string/title_activity_add_weight"
        android:shortcutId="weight"
        android:shortcutLongLabel="@string/title_activity_add_weight"
        android:shortcutShortLabel="@string/title_activity_add_weight">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetClass="org.glucosio.android.activity.AddWeightActivity"
            android:targetPackage="org.glucosio.android" />
    </shortcut>
    <shortcut
        android:enabled="true"
        android:icon="@drawable/add_circle_a1c"
        android:shortcutDisabledMessage="@string/title_activity_add_hb1ac"
        android:shortcutId="hb1ac"
        android:shortcutLongLabel="@string/title_activity_add_hb1ac"
        android:shortcutShortLabel="@string/title_activity_add_hb1ac">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetClass="org.glucosio.android.activity.AddA1CActivity"
            android:targetPackage="org.glucosio.android" />
    </shortcut>
    <shortcut
        android:enabled="true"
        android:icon="@drawable/add_circle_pressure"
        android:shortcutDisabledMessage="@string/title_activity_add_pressure"
        android:shortcutId="pressure"
        android:shortcutLongLabel="@string/title_activity_add_pressure"
        android:shortcutShortLabel="@string/title_activity_add_pressure">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetClass="org.glucosio.android.activity.AddPressureActivity"
            android:targetPackage="org.glucosio.android" />
    </shortcut>
</shortcuts>