<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minWidth="330dp"
    android:paddingTop="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_export_title"
            android:textColor="@color/glucosio_text"
            android:textSize="@dimen/abc_text_size_subhead_material"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/dialog_export_date_from"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:clickable="false"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:hint="@string/dialog_export_date_from"
                    android:singleLine="true"
                    android:textSize="@dimen/abc_text_size_body_2_material" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/dialog_export_date_to"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:clickable="false"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:hint="@string/dialog_export_date_to"
                    android:singleLine="true"
                    android:textSize="@dimen/abc_text_size_body_2_material" />
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_gravity="right"
            android:checked="false"
            android:text="@string/dialog_export_today" />


        <EditText
            android:id="@+id/dialog_type_custom"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/dialog_add_custom_type"
            android:singleLine="true"
            android:textColorHighlight="@color/glucosio_pink"
            android:textSize="@dimen/abc_text_size_body_2_material"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="16dp"
            android:gravity="right|bottom"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/dialog_export_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:background="?android:attr/selectableItemBackground"
                android:padding="8dp"
                android:text="@string/dialog_add_cancel"
                android:textColor="@color/glucosio_text"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/dialog_export_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:background="?android:attr/selectableItemBackground"
                android:padding="8dp"
                android:text="@string/dialog_export_button"
                android:textColor="@color/glucosio_pink"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>